Fixed bug missing border in career box in Edge

--- a/app/assets/stylesheets/module/_careers-result.scss
+++ b/app/assets/stylesheets/module/_careers-result.scss
@@ -148,6 +148,7 @@
     border: rem(1) solid $default;
     margin: rem(20) rem(20) 0 0;
     background-color: $white;
+    padding-left: 0.05px;
 
     &:last-child {
       @extend %no-margin-right;
